# promptops-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/review-prompts/: private-data-example.md
examples/safe-prompts/: release-notes.md
promptops_toolkit/: __init__.py  checks.py  cli.py
prompts/: blog-outline.md
tests/: __init__.py  test_checks.py
