[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptops-toolkit"
version = "0.1.0"
description = "Local-first prompt linting and inventory tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PromptOps Toolkit contributors" }]
keywords = ["prompt", "ai", "codex", "workflow", "lint"]

[project.scripts]
promptops-toolkit = "promptops_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptops_toolkit*"]
